<resources>
    <string name="app_name">NUB Women Safety App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thirtysecs">10 secs</string>
    <string name="onemin">30 secs</string>
    <string name="fivemins">1 min</string>
    <string name="make_call">Call</string>
    <string name="fake_name">Enter name</string>
    <string name="fake_number">Enter phone number</string>
    <string name="title_activity_fake_ringing">FakeRingingActivity</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Genny Nnaji</string>
    <string name="fakecallnumber">080371558000</string>

</resources>
