<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fakename"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:drawableRight="@drawable/ic_person_black_24dp"
        android:textAlignment="center"
        android:layout_marginTop="18dp"


       android:layout_centerHorizontal="true"
        android:hint="@string/fake_name"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/fakenumber"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:textAlignment="center"

        android:drawableRight="@drawable/ic_phone_android_black_24dp"
        android:layout_below="@+id/fakename"
        android:layout_marginTop="32dp"

        android:hint="@string/fake_number"

        android:inputType="phone"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fakenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_security_black_24dp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:checkedButton="@+id/radio1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#0C0C0C"
            android:text="@string/thirtysecs" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0C0C0C"
            android:text="@string/onemin" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0C0C0C"
            android:text="@string/fivemins" />
    </RadioGroup>

    <Button
        android:id="@+id/fakecalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:textStyle="bold"

        android:text="@string/make_call" />

</RelativeLayout>