<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fefefe"
>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#DDDEE2"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:textStyle="bold"
            android:text="@string/incomingcall"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:layout_marginTop="25dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_security_black_24dp" />

        <TextView
            android:id="@+id/chosenfakename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#0A0A0A"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/fakecallname" />

        <TextView
            android:id="@+id/chosenfakenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:paddingBottom="30dp"

            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/fakecallnumber" />



    </LinearLayout>



    <ImageView
        android:id="@+id/answercall"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"

        android:layout_marginLeft="50dp"
        android:contentDescription="@null"
        android:background="@drawable/phone" />

    <ImageView
        android:id="@+id/rejectcall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/answercall"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:contentDescription="@null"
        android:background="@drawable/reject"  />

</RelativeLayout>